add platform packages and update project settings

--- a/TestProjects/UniversalHybridTest/Packages/manifest.json
+++ b/TestProjects/UniversalHybridTest/Packages/manifest.json
@@ -9,6 +9,9 @@
         "com.unity.ide.vscode": "1.2.0",
         "com.unity.platforms.macos": "0.12.0-preview.10",
         "com.unity.platforms.windows": "0.12.0-preview.10",
+        "com.unity.platforms.android": "0.12.0-preview.10",
+        "com.unity.platforms.ios": "0.12.0-preview.10",
+        "com.unity.platforms.linux": "0.12.0-preview.10",
         "com.unity.render-pipelines.core": "file:../../../com.unity.render-pipelines.core",
         "com.unity.render-pipelines.universal": "file:../../../com.unity.render-pipelines.universal",
         "com.unity.rendering.hybrid": "0.13.0-preview.23",
