updating manifest.json

--- a/TestProjects/ShaderGraph/Packages/manifest.json
+++ b/TestProjects/ShaderGraph/Packages/manifest.json
@@ -51,5 +51,6 @@
   "testables": [
     "com.unity.shadergraph",
     "com.unity.testframework.graphics"
-  ]
+  ],
+  "registry": "https://artifactory.prd.cds.internal.unity3d.com/artifactory/api/npm/upm-candidates"
 }
