--- a/.yamato/_editor_pinning.yml
+++ b/.yamato/_editor_pinning.yml
@@ -16,11 +16,11 @@ editor-pinning-update:
     variables:
         CI: true
     commands:
-      -  pip config set global.index-url https://artifactory.prd.it.unity3d.com/artifactory/api/pypi/pypi/simple
-      -  pip install ruamel.yaml
+      -  pip3 config set global.index-url https://artifactory.prd.it.unity3d.com/artifactory/api/pypi/pypi/simple
+      -  pip3 install ruamel.yaml
       -  git config --global user.name "noreply@unity3d.com"
       -  git config --global user.email "noreply@unity3d.com"
-      -  python .yamato/script/editor_scripts/update_revisions.py --commit
+      -  python3 .yamato/script/editor_scripts/update_revisions.py --commit
     triggers:
         recurring:
           -  branch: master
