Use commit and push

--- a/.yamato/_editor_pinning.yml
+++ b/.yamato/_editor_pinning.yml
@@ -25,7 +25,7 @@ editor-pinning-update:
       -  git config --global user.name "noreply@unity3d.com"
       -  git config --global user.email "noreply@unity3d.com"
       -  git checkout $GIT_BRANCH
-      -  python3 .yamato/script/editor_scripts/update_revisions.py --commit
+      -  python3 .yamato/script/editor_scripts/update_revisions.py --commit-and-push
     triggers:
         recurring:
           -  branch: master
