--- a/.yamato/_editor_pinning.yml
+++ b/.yamato/_editor_pinning.yml
@@ -37,11 +37,12 @@ editor-pinning-store-green:
         image: package-ci/ubuntu:stable
         flavor: b1.small
     commands:
-      -  sudo pip3 install pipenv --index-url https://artifactory.prd.it.unity3d.com/artifactory/api/pypi/pypi/simple
-      -  python3 -m pipenv install --dev
+      -  pip3 config set global.index-url https://artifactory.prd.it.unity3d.com/artifactory/api/pypi/pypi/simple
+      -  pip3 install ruamel.yaml
       -  git config --global user.name "noreply@unity3d.com"
       -  git config --global user.email "noreply@unity3d.com"
-      -  pipenv run python3 .yamato/script/editor_scripts/store_green_revisions.py --target-branch $GIT_BRANCH --track trunk --apikey $YAMATO_KEY
+      -  git checkout $GIT_BRANCH
+      -  python3 .yamato/script/editor_scripts/store_green_revisions.py --target-branch $GIT_BRANCH --track trunk --apikey $YAMATO_KEY
     triggers:
         recurring:
           -  branch: master
